Align correct and incorrect boxes on page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -210,10 +210,8 @@ label.incorrect {
     text-transform: uppercase;
     color: #fff;
     font-size: 2vw;
-    text-align: center;
     display: inline-block;
-    margin-top: 10px;
-    margin-left: 250px;
+    margin: 10px 100px;
 }
 
 #right-score {
